--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chromedriver": "^104.0.0",
     "ffmpeg": "^0.0.4",
+    "jimp": "^0.16.1",
     "node-fetch": "^2.6.7",
     "selenium-webdriver": "^4.4.0",
     "sharp": "^0.30.7"
